packages/wasm/src/tests/snapshots/wasm__tests__tooltip__clean_math_inline_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      7,
      24
    ],
    "items": 9
  },
  {
    "range": [
      41,
      69
    ],
    "items": 11
  }
]
