packages/wasm/src/tests/snapshots/wasm__tests__tooltip__clean_math_string_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      1,
      17
    ],
    "items": 2
  },
  {
    "range": [
      21,
      32
    ],
    "items": 5
  },
  {
    "range": [
      36,
      49
    ],
    "items": 3
  }
]
