packages/wasm/src/tests/snapshots/wasm__tests__tooltip__clean_math_symbols_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      1,
      23
    ],
    "items": 6
  },
  {
    "range": [
      27,
      60
    ],
    "items": 16
  },
  {
    "range": [
      64,
      83
    ],
    "items": 6
  }
]
