packages/wasm/src/tests/snapshots/wasm__tests__tooltip__clean_multiline_math_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      1,
      29
    ],
    "items": 11
  },
  {
    "range": [
      33,
      64
    ],
    "items": 17
  },
  {
    "range": [
      68,
      85
    ],
    "items": 7
  },
  {
    "range": [
      89,
      130
    ],
    "items": 13
  },
  {
    "range": [
      136,
      163
    ],
    "items": 11
  },
  {
    "range": [
      167,
      202
    ],
    "items": 16
  }
]
