packages/wasm/src/tests/snapshots/wasm__tests__tooltip__clean_sub_attachment_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      10,
      18
    ],
    "items": 6
  }
]
