packages/wasm/src/tests/snapshots/wasm__tests__tooltip__clean_sup_attachment_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      10,
      21
    ],
    "items": 7
  }
]
