packages/wasm/src/tests/snapshots/wasm__tests__tooltip__clean_unicode_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      19,
      24
    ],
    "items": 3
  }
]
