packages/wasm/src/tests/snapshots/wasm__tests__tooltip__math_broken_call_tooltips.snap
---
source: wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      23,
      46
    ],
    "items": 4
  }
]
