packages/wasm/src/tests/snapshots/wasm__tests__tooltip__math_broken_call_undefined_tooltips.snap
---
source: wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      10,
      25
    ],
    "items": 2
  }
]
