packages/wasm/src/tests/snapshots/wasm__tests__tooltip__math_broken_ident_tooltips.snap
---
source: wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      10,
      26
    ],
    "items": 4
  }
]
