packages/wasm/src/tests/snapshots/wasm__tests__tooltip__math_ok_tooltips.snap
---
source: wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      7,
      24
    ],
    "items": 9
  },
  {
    "range": [
      41,
      69
    ],
    "items": 11
  }
]
